[tool.poetry]
name = "lnpy"
version = "0.1.0"
description = ""
authors = ["Karim Moradi <kmoradi.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.4"
requests = "^2.28.2"
pyfiglet = "^0.8.post1"
pytest = "^7.2.2"
black = "^23.3.0"
deptry = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
